--- a/posterReleaseItemGroup.json
+++ b/posterReleaseItemGroup.json
@@ -98,5 +98,30 @@
         "requiredQuantity": 120
       }
     ]
+  },
+  {
+    "id": 5,
+    "items": [
+      {
+        "currentPhase": 0,
+        "itemMasterId": 130071,
+        "requiredQuantity": 30
+      },
+      {
+        "currentPhase": 1,
+        "itemMasterId": 130071,
+        "requiredQuantity": 35
+      },
+      {
+        "currentPhase": 2,
+        "itemMasterId": 130071,
+        "requiredQuantity": 35
+      },
+      {
+        "currentPhase": 3,
+        "itemMasterId": 130071,
+        "requiredQuantity": 40
+      }
+    ]
   }
 ]
