--- a/posterReleaseItemGroup.json
+++ b/posterReleaseItemGroup.json
@@ -22,7 +22,8 @@
         "itemMasterId": 130071,
         "requiredQuantity": 2
       }
-    ]
+    ],
+    "unknown2": false
   },
   {
     "id": 2,
@@ -47,7 +48,8 @@
         "itemMasterId": 130071,
         "requiredQuantity": 5
       }
-    ]
+    ],
+    "unknown2": false
   },
   {
     "id": 3,
@@ -72,7 +74,8 @@
         "itemMasterId": 130071,
         "requiredQuantity": 20
       }
-    ]
+    ],
+    "unknown2": false
   },
   {
     "id": 4,
@@ -97,7 +100,8 @@
         "itemMasterId": 130072,
         "requiredQuantity": 120
       }
-    ]
+    ],
+    "unknown2": false
   },
   {
     "id": 5,
@@ -122,6 +126,7 @@
         "itemMasterId": 130071,
         "requiredQuantity": 40
       }
-    ]
+    ],
+    "unknown2": false
   }
 ]
