--- a/posterReleaseItemGroup.json
+++ b/posterReleaseItemGroup.json
@@ -99,6 +99,11 @@
         "currentPhase": 3,
         "itemMasterId": 130072,
         "requiredQuantity": 120
+      },
+      {
+        "currentPhase": 4,
+        "itemMasterId": 130072,
+        "requiredQuantity": 295
       }
     ],
     "unknown2": false
@@ -128,5 +133,31 @@
       }
     ],
     "unknown2": false
+  },
+  {
+    "id": 6,
+    "items": [
+      {
+        "currentPhase": 0,
+        "itemMasterId": 130071,
+        "requiredQuantity": 30
+      },
+      {
+        "currentPhase": 1,
+        "itemMasterId": 130071,
+        "requiredQuantity": 35
+      },
+      {
+        "currentPhase": 2,
+        "itemMasterId": 130071,
+        "requiredQuantity": 35
+      },
+      {
+        "currentPhase": 3,
+        "itemMasterId": 130071,
+        "requiredQuantity": 40
+      }
+    ],
+    "unknown2": true
   }
 ]
