--- a/posterReleaseItemGroup.json
+++ b/posterReleaseItemGroup.json
@@ -23,7 +23,7 @@
         "requiredQuantity": 2
       }
     ],
-    "unknown2": false
+    "itemConsumeApplyFlag": false
   },
   {
     "id": 2,
@@ -49,7 +49,7 @@
         "requiredQuantity": 5
       }
     ],
-    "unknown2": false
+    "itemConsumeApplyFlag": false
   },
   {
     "id": 3,
@@ -75,7 +75,7 @@
         "requiredQuantity": 20
       }
     ],
-    "unknown2": false
+    "itemConsumeApplyFlag": false
   },
   {
     "id": 4,
@@ -106,7 +106,7 @@
         "requiredQuantity": 295
       }
     ],
-    "unknown2": false
+    "itemConsumeApplyFlag": false
   },
   {
     "id": 5,
@@ -132,7 +132,7 @@
         "requiredQuantity": 40
       }
     ],
-    "unknown2": false
+    "itemConsumeApplyFlag": false
   },
   {
     "id": 6,
@@ -158,6 +158,6 @@
         "requiredQuantity": 40
       }
     ],
-    "unknown2": true
+    "itemConsumeApplyFlag": true
   }
 ]
